work on benchmark and production tuning